Complete backend MVP V1
